...
    <string name="gesture_name_swipe_right_two">Swipe right using two fingers</string>
    <string name="gesture_name_swipe_right_three">Swipe right using three fingers</string>
    <string name="gesture_name_swipe_up_two">Swipe up using two fingers</string>
    <string name="gesture_name_swipe_up_three">Swipe up using three fingers</string>
    <string name="gestures_pointers_two">Using two fingers</string>
    <string name="gestures_pointers_three">Using three fingers</string>
    <string name="get_help">Get help</string>
    <string name="help">Help</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="high_accuracy_mode_channel_name">High accuracy location</string>
    <string name="high_accuracy_mode_notification_title">High accuracy (GPS) mode enabled</string>
    <string name="hold_to_reorder">Hold to reorder</string>
...
    <string name="manage_ssids_warning">Make sure to set up your home network correctly. Adding public Wi-Fi networks or using multiple ethernet/VPN connections may unintentionally expose information about or access to your app or server.</string>
    <string name="manage_tiles_summary">Set up and manage quick settings tiles here. They will not function until you set them up here.</string>
    <string name="manage_tiles">Manage tiles</string>
    <string name="manage_wear_device">Manage device %1$s</string>
    <string name="manage_widgets_summary">Edit your widgets. Adding/deleting can only be done from the home screen.</string>
    <string name="manage_widgets">Manage widgets</string>
    <string name="manual_setup">Enter address manually</string>
    <string name="manual_title">What is your Alten address?</string>
    <string name="matter_commissioning_cancelled">Unable to add Matter device?</string>
    <string name="matter_commissioning_unavailable">Matter is currently unavailable</string>
    <string name="matter_shared_title">Add Matter device</string>
    <string name="matter_shared_status_not_registered">Please connect to your Alten server before adding a Matter device.</string>
    <string name="matter_shared_status_select_server">Which server would you like to use?</string>
...
    <string name="mute_unmute">Mute/Unmute</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="areas">Areas</string>
    <string name="more_entities">More entities</string>
    <string name="need_help">Need help?</string>
    <string name="navigate_up">Navigate up</string>
    <string name="nfc_btn_create_duplicate">Create duplicate</string>
    <string name="nfc_btn_fire_event">Fire event</string>
    <string name="nfc_btn_read_tag">Read NFC tag</string>
    <string name="nfc_btn_share">Share</string>
    <string name="nfc_btn_write_tag">Write NFC tag</string>
    <string name="nfc_event_fired_fail">Firing event failed, please try again</string>
...
    <string name="connection_security_level_title">Remote connection security level</string>
    <string name="connection_security_level_default_summary">Only connect to the server when we are sure that connection is encrypted or you are at home</string>
    <string name="connection_security_most_secure">Most secure: Allow this app to know when you\'re home</string>
    <string name="connection_security_less_secure">Less secure: Do not allow this app to know when you\'re home</string>
    <string name="branding_icon_content_description">Alten branding icon</string>
    <string name="loading_content_description">Loading</string>
    <string name="searching_home_network">Searching on\nhome network</string>
    <string name="server_discovery_no_server_info">Check that your connection to internet. You can enter the address manually if you know it.</string>
    <string name="server_discovery_connect">Connect</string>
    <string name="welcome_alten_title">AltenEMS App</string>
    <string name="welcome_details">Access your AltenEMS dashboard.</string>
    <string name="welcome_connect_to_ha">Connect to server</string>
    <string name="welcome_learn_more">Learn more</string>
    <string name="name_your_device_title">How would you like to name this device?</string>
    <string name="name_your_device_content">This is used to identify your device.</string>
    <string name="name_your_device_save">Save</string>
    <string name="manual_server_title">What is your Alten address?</string>
    <string name="manual_server_connect">Connect</string>
    <string name="manual_server_wrong_url">Invalid Alten address</string>
    <string name="connection_screen_malformed_url">Verify that your Alten address is correct</string>
    <string name="clear_text">Clear text</string>
    <string name="local_first_title">Local by default.\nRemote when you\'re ready.</string>
    <string name="local_first_content">Your Alten is only accessible on your home network. To control your smart home from anywhere, you can set up remote access later in your settings.\n\nFor now, you\'re securely connected to your local network.</string>
    <string name="local_first_next">Got it</string>
    <string name="location_sharing_title">Use this device\'s location for automations</string>
    <string name="location_sharing_content">Location sharing enables powerful automations, such as turning off the heating when you leave home. This option shares the device\'s location only with your Alten system.\n\nThis data stays in your home and is never sent to third parties. It also helps strengthen the security of your connection to Alten.</string>
    <string name="location_sharing_share">Share my location</string>
...
