...
import io.altenems.companion.android.common.compose.composable.HATopBar
import io.altenems.companion.android.common.compose.theme.HADimens
import io.altenems.companion.android.common.compose.theme.HATextStyle
import io.altenems.companion.android.common.compose.theme.HAThemeForPreview
import io.altenems.companion.android.util.compose.HAPreviews

@VisibleForTesting internal const val DEVICE_NAME_TEXT_FIELD_TAG = "device_name_text_field"

@Composable
internal fun NameYourDeviceScreen(
    onBackClick: () -> Unit,
    onHelpClick: suspend () -> Unit,
    viewModel: NameYourDeviceViewModel,
...
